makes services look better by aligning pictures correctly

--- a/src/Components/Process/ServiceChunk/ServiceChunk.module.css
+++ b/src/Components/Process/ServiceChunk/ServiceChunk.module.css
@@ -3,8 +3,7 @@
     display: flex;
     border-top: 1px solid rgba(128, 127, 127, 0.164);
     min-height: fit-content;
-    padding: 2em 0;
-    padding-left: 2em;
+    padding: 2em 2em;
 }
 
 .ServiceChunk .LeftDiv {
@@ -24,8 +23,9 @@
 .ServiceChunk .RightDiv {
     flex: 30%;
     display: flex;
-
+    align-content: center;
     padding: 2em 0;
+    justify-content: flex-end;
 }
 
 .ServiceChunk .RightDiv img{
@@ -42,12 +42,10 @@
     position: relative;
     overflow: hidden;
     border-radius: 50%;
-    align-self: center;
     border: 3px solid #f6c348;
     box-shadow:
     2px 4px 8px 0px hsla(0, 0%, 0%, 0.418);
     box-sizing: border-box;
-    margin: 0 auto;
 }
 
 @media only screen and (max-width: 800px){
